--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on:
       - codebuild-sm_cli_repo-${{ github.run_id }}-${{ github.run_attempt }}
     steps:
-      - run: echo "Hello World"
+      - run: echo "Hello World!"
