--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,5 +19,6 @@ jobs:
     
       - name: Upload package
         run: |
+          aws s3 ls s3://marc-test-555456986422-us-east-1/packages/
           # dist/sm_cli-0.1.0-py3-none-any.whl
           # s3://marc-test-555456986422-us-east-1/packages/
