removed db name customisation from the templates

--- a/templates/project-template.json
+++ b/templates/project-template.json
@@ -24,13 +24,7 @@
             ]
         },
         {
-            "environmentConfigurationName": "Lakehouse Database",
-            "environmentParameters": [
-                {
-                    "name": "glueDbName",
-                    "value": "${ACCOUNT}_${PROJECT_NAME}_glue_db"
-                }
-            ]
+            "environmentConfigurationName": "Lakehouse Database"
         }
     ]
 }
